// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders disabled if missing prop 1`] = `
<div
  className="background--light-primary one-whole text-center push-top push-double-top@lap-and-up push-double-bottom"
  style={
    Object {
      "overflow": "visible",
      "zIndex": 1,
    }
  }
>
  <Back />
  <Meta
    title="Change your password"
  />
  <Form
    classes={
      Array [
        "soft",
        "one-whole",
        "two-thirds@portable",
        "one-half@anchored",
        "display-inline-block",
        "soft-double-sides@palm-wide",
      ]
    }
    id="reset-password"
    submit={[Function]}
  >
    <div
      className="push-double"
    >
      <h4
        className="text-center"
      >
        Change Password
      </h4>
    </div>
    <Input
      label="Current Password"
      name="current"
      type="password"
      validation={[Function]}
    />
    <Input
      errorText="New password does not match"
      label="New Password"
      name="newP"
      type="password"
      validation={[Function]}
    />
    <Input
      errorText="New password does not match"
      label="Repeat New Password"
      name="newPDup"
      type="password"
      validation={[Function]}
    />
    <button
      className="btn--disabled"
      disabled={true}
    >
      Enter
    </button>
  </Form>
</div>
`;

exports[`renders with props 1`] = `
<div
  className="background--light-primary one-whole text-center push-top push-double-top@lap-and-up push-double-bottom"
  style={
    Object {
      "overflow": "visible",
      "zIndex": 1,
    }
  }
>
  <Back />
  <Meta
    title="Change your password"
  />
  <Form
    classes={
      Array [
        "soft",
        "one-whole",
        "two-thirds@portable",
        "one-half@anchored",
        "display-inline-block",
        "soft-double-sides@palm-wide",
      ]
    }
    id="reset-password"
    submit={[Function]}
  >
    <div
      className="push-double"
    >
      <h4
        className="text-center"
      >
        Change Password
      </h4>
    </div>
    <Input
      label="Current Password"
      name="current"
      type="password"
      validation={[Function]}
    />
    <Input
      errorText="New password does not match"
      label="New Password"
      name="newP"
      type="password"
      validation={[Function]}
    />
    <Input
      errorText="New password does not match"
      label="Repeat New Password"
      name="newPDup"
      type="password"
      validation={[Function]}
    />
    <button
      className="btn"
      disabled={false}
    >
      Enter
    </button>
  </Form>
</div>
`;
